--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "pinia": "^3.0.1",
     "vite-plugin-pwa": "^1.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
     "workbox-window": "^7.3.0"
   },
   "devDependencies": {
@@ -32,6 +31,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
+    "naive-ui": "^2.42.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
