Allow persisting pinia

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vite-pwa/assets-generator": "^1.0.0",
     "@vueuse/core": "^12.3.0",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "vite-plugin-pwa": "^1.0.0",
     "vue": "^3.5.13",
     "workbox-window": "^7.3.0"
